welcome.lessons.welcome.array.has271.Has271.scala.error
has271:9: error: type mismatch;
 found   : Int
 required: Boolean
		if (nums(i+1) == nums(i)+5 && nums(i+2) <= nums(i)+1 && nums(i)-1)  {
                                                                               ^